crates/cribo/tests/snapshots/execution_results@xfail_stickytape_explicit_relative_import_single_dot.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_explicit_relative_import_single_dot/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
