crates/cribo/tests/snapshots/execution_results@xfail_stickytape_import_from_as_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_import_from_as_module/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
