crates/cribo/tests/snapshots/execution_results@xfail_stickytape_imports_in_imported_modules.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_imports_in_imported_modules/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 6, in <module>",
}
